Make tab view order match tab strip model order

Bug: 897086
Change-Id: Idfd8e9a68c663ba3e560a6f2443b2a468cdd3c65
Reviewed-on: https://chromium-review.googlesource.com/c/1331617
Commit-Queue: Collin Baker <collinbaker@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608076}
Former-commit-id: 49b47da02e0975e274eb7e6328cc16975bcb31e4